[gd_scene load_steps=4 format=3 uid="uid://run_arena"]

[ext_resource type="Script" path="res://scripts/run_arena.gd" id="1_arena"]
[ext_resource type="PackedScene" path="res://scenes/player.tscn" id="2_player"]
[ext_resource type="PackedScene" path="res://scenes/demon_follower.tscn" id="3_demon"]

[node name="RunArena" type="Node2D"]
script = ExtResource("1_arena")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 0)
zoom = Vector2(1, 1)

[node name="Floor" type="TileMapLayer" parent="."]

[node name="Walls" type="TileMapLayer" parent="."]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(100, 100)

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1180, 100)

[node name="SpawnPoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(640, 620)

[node name="SpawnPoint4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(100, 620)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(640, 360)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="VBoxContainer" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = 0.0

[node name="HPLabel" type="Label" parent="UI/HUD"]
text = "HP: 100/100"

[node name="WaveLabel" type="Label" parent="UI/HUD"]
text = "Wave: 1/5"

[node name="AlignmentLabel" type="Label" parent="UI/HUD"]
text = "Alignment: Neutral (0)"

[node name="FusionPointsLabel" type="Label" parent="UI/HUD"]
text = "Fusion Points: 0"

[node name="NegotiationDialog" parent="UI" instance=ExtResource("2_player")]
